k8s/demo3/buy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buy
  namespace: fantastic-bike
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: buy
status:
  loadBalancer: {}
