k8s/demo3/buy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: buy
  namespace: fantastic-bike
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: fantasticbike.westeurope.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: buy
              servicePort: 80
            path: /
